--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,11 @@ body {
   position: relative;
   font-family: "微软雅黑"; }
 
+@font-face {
+  font-family: 'iconfont';
+  src: url("//at.alicdn.com/t/font_55lnx90v4gp0hpvi.eot");
+  src: url("//at.alicdn.com/t/font_55lnx90v4gp0hpvi.eot") format("embedded-opentype"), url("//at.alicdn.com/t/font_55lnx90v4gp0hpvi.woff") format("woff"), url("//at.alicdn.com/t/font_55lnx90v4gp0hpvi.ttf") format("truetype"), url("//at.alicdn.com/t/font_55lnx90v4gp0hpvi.svg#iconfont") format("svg"); }
+
 .m-icon {
   font-family: 'iconfont';
   font-size: 0.62rem;
